[package]
name = "focusbuddy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line tool to help people with ADHD manage their time and tasks"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
dialoguer = "0.11" 